--- a/UI/index.html
+++ b/UI/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="body_wrapper">
-        <div class="welcomebanner violet-bg">
+        <div class="welcomebanner green-bg">
             <div class="logo_container">
                 <img class="img_log" src="static/images/logo.jpg" alt="logo"/>
             </div>
@@ -28,7 +28,7 @@
                <!--used get here only to be able to host on github pages which does not support post 
                         others wise we should use post becuase of the senstive data which get may expose-->
 
-                <form action="registrationpage.html"><div class="reg-butt-container"><input type ="submit" name="submit"  value="CREATE ACCOUNT" class="register_button violet-bg with-shadow"/></div></form>
+                <form action="registrationpage.html"><div class="reg-butt-container"><input type ="submit" name="submit"  value="CREATE ACCOUNT" class="register_button green-bg with-shadow"/></div></form>
             </div>
             
             <div class="call_to_signin">
@@ -55,7 +55,7 @@
 
             </div>
         </div>
-        <footer class="violet-bg">
+        <footer class="green-bg">
                 <p class="footer-para text-centered">Andela - bootcamp cohort 15 <span class="red-color">All rights reserved</span></p>
             </footer>
     </div>   
