Decided to use a form instead for input processing

--- a/UI/registrationpage.html
+++ b/UI/registrationpage.html
@@ -41,7 +41,7 @@
                 <div class="login-form-container">
 
                     <!--start of form-->
-                    <div class="form">
+                    <form class="form">
 
                         <label class="form_control" role="firstNamelabel">
                             <span class="form-para-label">First name<span class="red-color"> *</span></span>
@@ -92,7 +92,7 @@
                         <div class="form_control form-controls-container">
                             <input type="submit" class="primary-button submit-button" value="Sign up" name="submit" />
                         </div>
-                    </div>
+                    </form>
                     <!--end of form-->
                 </div>
 
