Added aside to display details about the user

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -1,21 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>iReporter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css"  href="static/css/globalstyles.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/globalstyles.css" />
     <link rel="stylesheet" type="text/css" href="static/css/main.css" />
-    <link rel="stylesheet" type="text/css"  href="static/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="static/font-awesome/css/font-awesome.min.css" />
     <script type="text/javascript" src="static/js/main.js"></script>
 </head>
+
 <body>
 
     <div class="body_wrapper">
-        
+        <div class="big-banner violet-bg">
+            <div class="banner">
+                <div class="logo_container">
+                    <img class="img_log" src="static/images/logo.jpg" alt="logo" />
+                </div>
+                <div class="banner_main">
+                    <h3 class="welcome_message">iReporter</h3>
+                </div>
+            </div>
+            <nav class="main-nav">
+
+            </nav>
+        </div>
+
+        <div class="side">
+
+            <div classs="user_info">
+                <div class="user-image-container">
+                    <img class="user-image-circular" src="static/images/logo.jpg" alt="profile picture" />
+                </div>
+                <div class="text-left-aligned user-details">
+                    <p class="black-color"><span class="usersname fa fa-user"> JBaker</span></p>
+                    <p class="black-color"><span class="usersemail fa fa-envelope"> ssemugoomaabubaker@gmail.com</span></p>
+                    <p class="black-color"><span class="usersname fa fa-phone"> 0797261299</span></p>
+                </div>
+                <hr class="horizontal-line">
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="specificrecord-full with-shadow">
+                <!-- content here should be fetched and displayed dynamically in a list
+                            with js probably
+                        below are just place holders fr two dummy records-->
+                <h2 class="list_header">All your red-flag/intervention records</h2>
+                <hr class="horizontal-line">
+
+        </div>
+
         <footer class="violet-bg normal-footer main-footer">
-                <p class="footer-para text-centered">Andela - bootcamp cohort 15 <span class="red">All rights reserved</span></p>
+            <p class="footer-para text-centered">Andela - bootcamp cohort 15 <span class="red">All rights reserved</span></p>
         </footer>
     </div>
     <script>
@@ -24,4 +64,5 @@
         // for validation odf user in put and contacting back end using javascript and ajax requests
     </script>
 </body>
+
 </html>
