Add a paragraph to display number of resoved red flags to profile.html

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -44,6 +44,7 @@
 
                 <!-- real numbers must be gotten by a function-->
                 <div class="mathematics">
+                    <p><span class="fa fa-square  resolved-color"></span> Red Flags resolved <span class="number"><script> document.write(getNumberOfRecordsForUser(1,"resolved","red-flag"))</script></span></p> 
                     <p><span class="fa fa-square  under-investigation-color"></span> Red Flags under investigation <span class="number"><script> document.write(getNumberOfRecordsForUser(1,"under-investigation","red-flag"))</script></span></p> 
                     <p><span class="fa fa-square  rejected-color"></span> Red Flags rejected <span class="number"><script> document.write(getNumberOfRecordsForUser(1,"rejected","red-flag"))</script></span></p> 
                 </div>
