--- a/UI/profile.html
+++ b/UI/profile.html
@@ -51,6 +51,7 @@
                     <p><span class="fa fa-square  under-investigation-color"></span> Intervention calls under investigation <span class="number"><script> document.write(getNumberOfRecordsForUser(1,"under-investigation","intervention"))</script></span></p> 
                     
                     <p><span class="fa fa-square  rejected-color"></span> Red Flags rejected <span class="number"><script> document.write(getNumberOfRecordsForUser(1,"rejected","red-flag"))</script></span></p> 
+                    <p><span class="fa fa-square  rejected-color"></span> Intervention calls rejected <span class="number"><script> document.write(getNumberOfRecordsForUser(1,"rejected","intervention"))</script></span></p>
                 </div>
 
             </div>
