Splitted the body into a side panel to display details about the user and main panel to display the form to create a record

--- a/UI/createrecord.html
+++ b/UI/createrecord.html
@@ -12,5 +12,25 @@
 </head>
 <body>
 
+    <div class="side">
+        
+            <div classs="user_info">
+                <div class="user-image-container">
+                    <img class="user-image-circular" src ="static/images/logo.jpg" alt="profile picture"/>
+                </div>
+                <div class="text-left-aligned user-details">
+                    <p class="black-color"><span class="usersname fa fa-user"> JBaker</span></p>
+                    <p class="black-color"><span class="usersemail fa fa-envelope"> ssemugoomaabubaker@gmail.com</span></p>
+                    <p class="black-color"><span class="usersname fa fa-phone"> 0797261299</span></p>
+                </div >
+                <hr>
+            </div>
+    </div>
+
+    <div class="content">
+
+        
+    </div>
+
 </body>
 </html>
