--- a/UI/profile.html
+++ b/UI/profile.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <nav class="main-nav">
-                    <a role="menuitem" href="createrecord.html" class="white-color"><i class="green-color"></i> New</a>
+                    <a role="menuitem" href="createrecord.html" class="white-color"><i class="green-color"></i> CREATE RECORD</a>
             </nav>
         </div>
 
