--- a/UI/profile.html
+++ b/UI/profile.html
@@ -25,7 +25,8 @@
                 </div>
             </div>
             <nav class="main-nav">
-                    <a role="menuitem" href="createrecord.html" class="white-color"><i class="green-color"></i> CREATE RECORD</a>
+                <a role="menuitem" href="createrecord.html" class="white-color">CREATE RECORD</a>
+                <a role="menuitem" href="editRecord.html?recordid=id" class="white-color">EDIT RECORD</a>
             </nav>
         </div>
 
